feat: add filter by popularity to /posts/search
