# src/post-pages/types/popularity-sort.enum.ts
@@ -1,0 +1,6 @@
+export enum PopularitySort {
+  popular,
+  'popular-today',
+  'popular-week',
+  none,
+}
